style: prevent page layout shift when scrollbar shows up

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,9 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+  .scrollbar-gutter-stable {
+    scrollbar-gutter: stable;
+  }
 }
 
 .ql-container {
